Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-89736

focusable item becomes impossible to focus after reparenting to a newly loaded item

XMLWordPrintable

    • Linux/Wayland
    • a8be17a1472c6f504c0c40f68fdc13df035ac4b4 (qt/qtdeclarative/dev) 295e30b4ea2dd1ff269bd05a66fdf56083b3f89b (qt/qtdeclarative/6.1) 52c6fd1437df56cc167d208bafb85c1096bfc1cb (qt/qtdeclarative/6.0) 6c56f0eef6 (qt/tqtc-qtdeclarative/5.15-opensource)

      Step to reproduce:

      1. Run pure-qml as Wayland compositor
      2. Run any IVI Wayland client (iviId=100) with a textField
      3. Click on textField and enter something using Qt Virtual Keyboard
      4. Click on "Hide/show" button twice with an interval
      5. Click on textField and enter something using Qt Virtual Keyboard

      Results:
      3. The text is entered into the inputField
      5. No text is entered in the inputField. (But the predictions work fine.)

      Used QVK with Cerence libraries and patches for them.

        1. compositor_output.txt
          36 kB
          Kolchin Evgeny
        2. polishItemscrash-1.png
          357 kB
          Tuomas Vaarala
        3. polishItemscrashdetail.png
          141 kB
          Tuomas Vaarala
        4. pure-qml_new.zip
          37 kB
          Kolchin Evgeny
        5. pure-qml.zip
          36 kB
          Kolchin Evgeny
        6. qtbug89736_hideShow.tar.gz
          2 kB
          Eskil Abrahamsen Blomfeldt
        7. simpler.qml
          4 kB
          Shawn Rutledge
        8. tree.png
          29 kB
          Shawn Rutledge
        For Gerrit Dashboard: QTBUG-89736
        # Subject Branch Project Status CR V

            srutledg Shawn Rutledge
            evgeniy_kolchin Kolchin Evgeny
            Votes:
            0 Vote for this issue
            Watchers:
            15 Start watching this issue

              Created:
              Updated:
              Resolved: